--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>About Brent</h1>
         <p>This is all about meeeee!!!</p>
         
-        <script type="text.javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 
 </html>
