added photo, fixed button for guess game, additional styling added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
         <h1>Brent Woodward</h1>
         
         <h2>A Brief Introduction</h2>
-        <p>I am a 29 year old aspiring software developer who is currently studying code at Code Fellows.  I have been married for almost 5 years to my lovely wife, Kristin, who
-             is the greatest partner in life I ever could have hoped for.  I am a passionate problem solver and love to push myself to learn new things.  I believe that everyone should have access to technology and find it accessible to use.
-            With support and the advantages that technology can provide I believe that anyone can achieve their goals in life.</p>
-        
+        <p>I am a 29 year old aspiring software developer who is currently studying at Code Fellows.  I have been married for almost 5 years to my amazing wife, Kristin, who
+             is the greatest partner in life I ever could have hoped for.  I am a passionate problem solver and love to push myself to learn new things.  I believe that we each 
+            have the ability to make a difference in the world. By leveraging our understanding of technology we are able to expand the scope of that positive impact.
+            <picture>
+                <img src="img/brent-woodward-photo.jpg">
+            </picture>
+        </p>        
         <h2>My Goals</h2>
         <p>I have three driving goals in my life right now:
             <ul>
@@ -28,9 +31,9 @@
 
         <table>
             <tr>
-                <td>Front Office Manager</td>
-                <td>Guest Services Manager</td>
-                <td>Concierge</td>
+                <th>Front Office Manager</td>
+                <th>Guest Services Manager</td>
+                <th>Concierge</td>
             </tr>
             <tr>
                 <td>Hotel Sorrento</td>
@@ -50,15 +53,31 @@
         </table>
 
         <h2>My Education</h2>
-        <p>
+        <table>
+            <tr>
+                <td>Code Fellows</td>
+                <td>NDSU</td>
+            </tr>
+            <tr>
+                <td>Seattle, WA</td>
+                <td>Fargo, ND</td>
+            </tr>
+            <tr>
+                <td>Currently Enrolled</td>
+                <td>General Studies</td>
+            </tr>
+            <tr>
+                <td>2018</td>
+                <td>2009</td>
+            </tr>   
+        </table>
 
-        </p>
+        <h2>Guessing Game</h2>
+        <p>Let's play a game to see how much you can guess about me. Do you think you are up for it?</p>
+        <button type="button" onclick="knowMeGame()">Click to Play</button>
 
 
-        <button type="button" onclick="knowMeGame()">Click to Play Game</button>
-        <!--
-            <script type="text/javascript" src="js/app.js"></script>
-        -->
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 
 </html>
