--- a/index.html
+++ b/index.html
@@ -8,73 +8,67 @@
     </head>
 
     <body>
-        <h1>Brent Woodward</h1>
+        <h1 class="important">Brent Woodward</h1>
         
-        <h2>A Brief Introduction</h2>
-        <p>I am a 29 year old aspiring software developer who is currently studying at Code Fellows.  I have been married for almost 5 years to my amazing wife, Kristin, who
+        <h2 class="important">A Brief Introduction</h2>
+            <p><img src="img/brent-woodward-photo.jpg" align="right" />I am a 29 year old aspiring software developer who is currently studying at Code Fellows.  I have been married for almost 5 years to my amazing wife, Kristin, who
              is the greatest partner in life I ever could have hoped for.  I am a passionate problem solver and love to push myself to learn new things.  I believe that we each 
-            have the ability to make a difference in the world. By leveraging our understanding of technology we are able to expand the scope of that positive impact.
-            <picture>
-                <img src="img/brent-woodward-photo.jpg">
-            </picture>
-        </p>        
-        <h2>My Goals</h2>
-        <p>I have three driving goals in my life right now:
+            have the ability to make a difference in the world. By leveraging our understanding of technology we are able to expand the scope of that positive impact.</p>        
+
+        <h2 class="important">My Goals</h2>
             <ul>
                 <li>Support myself and my family with a career that I am passionate about.</li>
                 <li>Make a difference in the work.  Whether it is through my career, my hobbies, or my community involvement.</li>
                 <li>Go beyond just living life.  Discover new things to experience and see as much of the world as I can.</li>
             </ul>
-        </p>
         
-        <h2>My Work History</h2>
+        <h2 class="important">My Work History</h2>
+            <table>
+                <tr>
+                    <th class="important">Front Office Manager</td>
+                    <th class="important">Guest Services Manager</td>
+                    <th class="important">Concierge</td>
+                </tr>
+                <tr>
+                    <td>Hotel Sorrento</td>
+                    <td>Aloft Tallahassee Downtown</td>
+                    <td>Radisson Blu Mall of America</td>
+                </tr>
+                <tr>
+                    <td>Seattle, WA</td>
+                    <td>Tallahassee, FL</td>
+                    <td>Bloomington, MN</td>
+                </tr>
+                <tr>
+                    <td>Aug 2016 - June 2018</td>
+                    <td>Feb 2013 - Aug 2016</td>
+                    <td>Mar 2013 - Jan 2013</td>
+                </tr>
+            </table>
 
-        <table>
-            <tr>
-                <th>Front Office Manager</td>
-                <th>Guest Services Manager</td>
-                <th>Concierge</td>
-            </tr>
-            <tr>
-                <td>Hotel Sorrento</td>
-                <td>Aloft Tallahassee Downtown</td>
-                <td>Radisson Blu Mall of America</td>
-            </tr>
-            <tr>
-                <td>Seattle, WA</td>
-                <td>Tallahassee, FL</td>
-                <td>Bloomington, MN</td>
-            </tr>
-            <tr>
-                <td>Aug 2016 - June 2018</td>
-                <td>Feb 2013 - Aug 2016</td>
-                <td>Mar 2013 - Jan 2013</td>
-            </tr>
-        </table>
+        <h2 class="important">My Education</h2>
+            <table>
+                <tr>
+                    <th class="important">Code Fellows</td>
+                    <th class="important">NDSU</td>
+                </tr>
+                <tr>
+                    <td>Seattle, WA</td>
+                    <td>Fargo, ND</td>
+                </tr>
+                <tr>
+                    <td>Currently Enrolled</td>
+                    <td>General Studies</td>
+                </tr>
+                <tr>
+                    <td>2018</td>
+                    <td>2009</td>
+                </tr>   
+            </table>
 
-        <h2>My Education</h2>
-        <table>
-            <tr>
-                <td>Code Fellows</td>
-                <td>NDSU</td>
-            </tr>
-            <tr>
-                <td>Seattle, WA</td>
-                <td>Fargo, ND</td>
-            </tr>
-            <tr>
-                <td>Currently Enrolled</td>
-                <td>General Studies</td>
-            </tr>
-            <tr>
-                <td>2018</td>
-                <td>2009</td>
-            </tr>   
-        </table>
-
-        <h2>Guessing Game</h2>
-        <p>Let's play a game to see how much you can guess about me. Do you think you are up for it?</p>
-        <button type="button" onclick="knowMeGame()">Click to Play</button>
+        <h2 class="important">Guessing Game</h2>
+            <p>Let's play a game to see how much you can guess about me. Do you think you are up for it?</p>
+            <button type="button" onclick="knowMeGame()">Click to Play</button>
 
 
         <script type="text/javascript" src="js/app.js"></script>
