fix errors, tweak style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="important">Brent Woodward</h1>
         
         <h2 class="important">A Brief Introduction</h2>
-            <p><img src="img/brent-woodward-photo.jpg" align="right" />I am a 29 year old aspiring software developer who is currently studying at Code Fellows.  I have been married for almost 5 years to my amazing wife, Kristin, who
+            <p id="bio"><img src="img/brent-woodward-photo.jpg" align="right" />I am a 29 year old aspiring software developer who is currently studying at Code Fellows.  I have been married for almost 5 years to my amazing wife, Kristin, who
              is the greatest partner in life I ever could have hoped for.  I am a passionate problem solver and love to push myself to learn new things.  I believe that we each 
             have the ability to make a difference in the world. By leveraging our understanding of technology we are able to expand the scope of that positive impact.</p>        
 
