--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <h2 class="important">Guessing Game</h2>
             <p>Let's play a game to see how much you can guess about me. Do you think you are up for it?</p>
-            <button type="button" onclick="knowMeGame()">Click to Play</button>
+            <button class="important" type="button" onclick="knowMeGame()">Click to Play</button>
 
 
         <script type="text/javascript" src="js/app.js"></script>
