added 6th question (open answer)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         <h1 class="important">Brent Woodward</h1>
         
         <h2 class="important">A Brief Introduction</h2>
-            <p id="bio"><img src="img/brent-woodward-photo.jpg" align="right" />I am a 29 year old aspiring software developer who is currently studying at Code Fellows.  I have been married for almost 5 years to my amazing wife, Kristin, who
-             is the greatest partner in life I ever could have hoped for.  I am a passionate problem solver and love to push myself to learn new things.  I believe that we each 
-            have the ability to make a difference in the world. By leveraging our understanding of technology we are able to expand the scope of that positive impact.</p>        
+            <p id="bio"><img src="img/brent-woodward-photo.jpg" align="right" />I am a 29 year old aspiring software developer who is currently studying at Code Fellows.  I have been married for almost 5 years to my amazing wife, Kristin, who is the greatest partner in life I ever could have hoped for.  I am a passionate problem solver and love to push myself to learn new things.  I believe that we each have the ability to make a difference in the world. By leveraging our understanding of technology we are able to expand the scope of that positive impact.</p>        
 
         <h2 class="important">My Goals</h2>
             <ul>
@@ -47,7 +45,7 @@
             </table>
 
         <h2 class="important">My Education</h2>
-            <table>
+            <!-- <table>
                 <tr>
                     <th class="important">Code Fellows</td>
                     <th class="important">NDSU</td>
@@ -64,12 +62,25 @@
                     <td>2018</td>
                     <td>2009</td>
                 </tr>   
-            </table>
+            </table> -->
+				<h2 class="important">Favorite Books or Book Series</h2>
+						<ol>
+							<Li>Kingkiller Chronicles Series by Patrick Rothfuss</Li>
+							<li>Wheel of Time Series by Robert Jordan & Brandon Sanderson</li>
+							<li>Dresden Files Series by Jim Butcher</li>
+							<li>Dune by Frank Herbert</li>
+							<li>Way of Kings Series by Brandon Sanderson</li>
+							<li>Mistborn Series by Brandon Sanderson</li>
+							<li>Seventh Son Series by Orson Scott Card</li>
+							<li>The Magic Engineer by L.E. Modesitt, Jr.</li>
+							<li>Ender's Game by Orson Scott Card</li>
+							<li>The Chronicles of Narnia Series by C.S. Lewis</li>
+						</ol>
+
 
         <h2 class="important">Guessing Game</h2>
             <p>Let's play a game to see how much you can guess about me. Do you think you are up for it?</p>
-            <button class="important" type="button" onclick="knowMeGame()">Click to Play</button>
-
+            
 
         <script type="text/javascript" src="js/app.js"></script>
     </body>
