--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </table>
 
         <h2 class="important">My Education</h2>
-            <!-- <table>
+            <table>
                 <tr>
                     <th class="important">Code Fellows</td>
                     <th class="important">NDSU</td>
@@ -62,7 +62,7 @@
                     <td>2018</td>
                     <td>2009</td>
                 </tr>   
-            </table> -->
+            </table>
 				<h2 class="important">Favorite Books or Book Series</h2>
 						<ol>
 							<Li>Kingkiller Chronicles Series by Patrick Rothfuss</Li>
@@ -79,10 +79,10 @@
 
 
         <h2 class="important">Guessing Game</h2>
-            <p>Let's play a game to see how much you can guess about me. Do you think you are up for it?</p>
+            <p>Let's play that guessing game again. Reload the page if you think you are up for it.</p>
             
 
-        <script type="text/javascript" src="js/app.js"></script>
+        <!-- <script type="text/javascript" src="js/app.js"></script> -->
     </body>
 
 </html>
