added back in JS link to HTML

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>Let's play that guessing game again. Reload the page if you think you are up for it.</p>
             
 
-        <!-- <script type="text/javascript" src="js/app.js"></script> -->
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 
 </html>
