--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<body>
 
 		<header>
-			<h1 class="important">Brent Woodward</h1>
 		</header>
 		
 		<main>
 			<h2 class="important">A Brief Introduction</h2>
-				<p id="bio"><img src="img/brent-woodward-photo.jpg" align="right" />I am a 29 year old aspiring software developer who is currently studying at Code Fellows.  I have been married for almost 5 years to my amazing wife, Kristin, who is the greatest partner in life I ever could have hoped for.  I am a passionate problem solver and love to push myself to learn new things.  I believe that we each have the ability to make a difference in the world. By leveraging our understanding of technology we are able to expand the scope of that positive impact.</p>        
-
+			
+				<p id="BiographicSummary">I am a 29 year old aspiring software developer who is currently studying at Code Fellows.  I have been married for almost 5 years to my amazing wife, Kristin, who is the greatest partner in life I ever could have hoped for.  I am a passionate problem solver and love to push myself to learn new things.  I believe that we each have the ability to make a difference in the world. By leveraging our understanding of technology we are able to expand the scope of that positive impact.</p>        
+			
 			<h2 class="important">My Goals</h2>
 				<ul>
 						<li>Support myself and my family with a career that I am passionate about.</li>
@@ -25,26 +25,24 @@
 				</ul>
 			
 			<h2 class="important">My Work History</h2>
-				<table>
+				<table id="work-history">
 						<tr>
-								<th class="important">Front Office Manager</td>
-								<th class="important">Guest Services Manager</td>
-								<th class="important">Concierge</td>
-						</tr>
-						<tr>
+								<td class="Previous-Job-Title">Front Office Manager</td>
 								<td>Hotel Sorrento</td>
-								<td>Aloft Tallahassee Downtown</td>
-								<td>Radisson Blu Mall of America</td>
-						</tr>
-						<tr>
 								<td>Seattle, WA</td>
-								<td>Tallahassee, FL</td>
-								<td>Bloomington, MN</td>
+								<td>Aug 2016 - June 2018</td>
 						</tr>
 						<tr>
-								<td>Aug 2016 - June 2018</td>
-								<td>Feb 2013 - Aug 2016</td>
-								<td>Mar 2013 - Jan 2013</td>
+								<td class="Previous-Job-Title">Guest Services Manager</td>
+								<td>Aloft Tallahassee Downtown</td>
+								<td>Tallahassee, FL</td>
+								<td>Feb 2014 - Aug 2016</td>
+						</tr>
+						<tr>
+								<td class="Previous-Job-Title">Concierge</td>
+								<td>Radisson Blu Mall of America</td>
+								<td>Bloomington, MN</td>
+								<td>Mar 2013 - Dec 2013</td>
 						</tr>
 				</table>
 
@@ -83,8 +81,21 @@
 
 
 			<h2 class="important">Guessing Game</h2>
-					<p>Let's play that guessing game again. Reload the page if you think you are up for it.</p>
+					<p>Let's play a guessing game about me. Click the button below you think you are up for it.</p>
+					<button onclick="guessingGame()">Press to Play</button>
 		</main>
+
+		<aside>
+
+			<div id="name-wrapper">
+				<h1 class="important">Brent Woodward</h1>
+			</div>
+
+			<figure>
+				<img src="img/brent-woodward-photo.jpg" alt="Close picture of Brent Woodward in a vest and tie.">
+			</figure>
+
+		</aside>
 
 		<script type="text/javascript" src="js/app.js"></script>
 	</body>
